--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,17 +40,17 @@ add_library(${PROJECT_NAME} STATIC
   ${CMAKE_CURRENT_SOURCE_DIR}/sources/CPP.cpp
 )
 
-/*add_executable(demo
-  ${CMAKE_CURRENT_SOURCE_DIR}/demo/main.cpp
-)
-*/
+#add_executable(demo
+#  ${CMAKE_CURRENT_SOURCE_DIR}/demo/main.cpp
+#)
+
 target_include_directories(${PROJECT_NAME} PUBLIC
   "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
   "$<INSTALL_INTERFACE:include>"
 )
-/*
-target_link_libraries(demo ${PROJECT_NAME})
-*/
+
+#target_link_libraries(demo ${PROJECT_NAME})
+
 target_link_libraries(${PROJECT_NAME} Boost::log)
 
 if(BUILD_TESTS)
