--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,15 +53,15 @@ target_link_libraries(demo ${PROJECT_NAME})
 
 target_link_libraries(${PROJECT_NAME} Boost::log)
 
-if(BUILD_TESTS)
-  add_executable(tests
+#if(BUILD_TESTS)
+  #add_executable(tests
     # TODO: enum your files and delete this comment
-    ${CMAKE_CURRENT_SOURCE_DIR}/tests/test.cpp
-  )
-  target_link_libraries(tests ${PROJECT_NAME} GTest::gtest_main)
+    #${CMAKE_CURRENT_SOURCE_DIR}/tests/test.cpp
+  #)
+  #target_link_libraries(tests ${PROJECT_NAME} GTest::gtest_main)
   #enable_testing()
-  add_test(NAME unit_tests COMMAND tests)
-endif()
+  #add_test(NAME unit_tests COMMAND tests)
+#endif()
 
 if(BUILD_COVERAGE)
   set(ENABLE_COVERAGE ON CACHE BOOL "Enable coverage build." FORCE)
