--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,7 +69,7 @@ if(BUILD_COVERAGE)
   find_package(codecov)
   string(APPEND CMAKE_CXX_FLAGS " --coverage")
   add_coverage(${PROJECT_NAME})
-  add_coverage(tests)
+  #add_coverage(tests)
   coverage_evaluate()
 endif()
 
