--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -86,13 +86,13 @@ endif()
 
 include(CPackConfig.cmake)
 
-install(TARGETS ${PROJECT_NAME} demo
-  EXPORT "${PROJECT_NAME}-targets"
-  RUNTIME DESTINATION bin
-  ARCHIVE DESTINATION lib
-  LIBRARY DESTINATION lib
-  INCLUDES DESTINATION include
-)
+#install(TARGETS ${PROJECT_NAME} demo
+ # EXPORT "${PROJECT_NAME}-targets"
+  #RUNTIME DESTINATION bin
+  #ARCHIVE DESTINATION lib
+  #LIBRARY DESTINATION lib
+  #INCLUDES DESTINATION include
+#)
 
 install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/ DESTINATION include)
 
