--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,7 +40,7 @@ find_package(nlohmann_json 3.1.4 CONFIG REQUIRED)
   #${CMAKE_CURRENT_SOURCE_DIR}/sources/CPP.cpp
 #)
 
-add_executable(${PROJECT_NAME}
+add_executable(CPP
  ${CMAKE_CURRENT_SOURCE_DIR}/sources/CPP.cpp
 )
 
