--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,7 +30,7 @@ string(APPEND CMAKE_CXX_FLAGS " -Wshadow -Wnon-virtual-dtor")
 #find_package(GTest CONFIG REQUIRED)
 
 hunter_add_package(Boost COMPONENTS log)
-find_package(Boost 1.72.0 CONFIG REQUIRED log)
+find_package(Boost 1.72.0 CONFIG REQUIRED log thread filesystem date_time)
 
 hunter_add_package(nlohmann_json)
 find_package(nlohmann_json 3.1.4 CONFIG REQUIRED)
