--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,7 +32,7 @@ add_definitions(-DBOOST_ERROR_CODE_HEADER_ONLY)
 #find_package(GTest CONFIG REQUIRED)
 
 hunter_add_package(Boost COMPONENTS thread system filesystem log)
-find_package(Boost 1.72.0 CONFIG REQUIRED system thread filesystem log log_setup)
+find_package(Boost 1.72.0 CONFIG REQUIRED log log_setup thread date_time filesystem system)
 
 hunter_add_package(nlohmann_json)
 find_package(nlohmann_json 3.1.4 CONFIG REQUIRED)
