--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,27 +21,19 @@ HunterGate(
 )
 
 # TODO: rename project and delete this comment
-project(lab6 VERSION 0.1.0)
+project(lab7 VERSION 0.1.0)
+
 string(APPEND CMAKE_CXX_FLAGS " -pedantic -Werror -Wall -Wextra")
 string(APPEND CMAKE_CXX_FLAGS " -Wno-unused-command-line-argument")
 string(APPEND CMAKE_CXX_FLAGS " -Wshadow -Wnon-virtual-dtor")
 
 add_definitions(-DBOOST_ERROR_CODE_HEADER_ONLY)
-
-#hunter_add_package(GTest)
-#find_package(GTest CONFIG REQUIRED)
-
 hunter_add_package(Boost COMPONENTS  system filesystem log)
 find_package(Boost 1.72.0 CONFIG REQUIRED thread log log_setup  date_time filesystem system)
 
 #SET(Boost_USE_STATIC_LIBS ON)  
 #SET(Boost_USE_MULTITHREADED ON)  
 #FIND_PACKAGE(Boost 1.72.0 COMPONENTS **system thread filesystem date_time log log_setup** REQUIRED)  
-
-
-
-
-
 
 hunter_add_package(nlohmann_json)
 find_package(nlohmann_json 3.8.0 CONFIG REQUIRED)
@@ -50,12 +42,15 @@ find_package(nlohmann_json 3.8.0 CONFIG REQUIRED)
   # enum your files and delete this comment
   #${CMAKE_CURRENT_SOURCE_DIR}/sources/CPP.cpp
 #)
-
-add_executable(CPP
- ${CMAKE_CURRENT_SOURCE_DIR}/sources/CPP.cpp
+add_library(parser STATIC
+  # enum your files and delete this comment
+  ${CMAKE_CURRENT_SOURCE_DIR}/sources/suggestions.cpp
+)
+add_executable(lab7
+ ${CMAKE_CURRENT_SOURCE_DIR}/sources/lab7.cpp
 )
 
-target_include_directories(CPP
+target_include_directories(lab7
   PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include
 )
 
