--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,12 +38,7 @@ find_package(Boost 1.72.0 CONFIG REQUIRED thread log log_setup  date_time filesy
 hunter_add_package(nlohmann_json)
 find_package(nlohmann_json 3.8.0 CONFIG REQUIRED)
 
-#add_library(${PROJECT_NAME} STATIC
-  # enum your files and delete this comment
-  #${CMAKE_CURRENT_SOURCE_DIR}/sources/CPP.cpp
-#)
-add_library(parser STATIC
-  # enum your files and delete this comment
+add_library(suggestions STATIC
   ${CMAKE_CURRENT_SOURCE_DIR}/sources/suggestions.cpp
 )
 add_executable(lab7
@@ -53,21 +48,14 @@ add_executable(lab7
 target_include_directories(lab7
   PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include
 )
+target_include_directories(suggestions
+  PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include
+)
+target_link_libraries(lab7 nlohmann_json::nlohmann_json)
+target_link_libraries(suggestions nlohmann_json::nlohmann_json)
 
-#target_link_libraries(demo ${PROJECT_NAME})
 
-target_link_libraries(CPP Boost::log)
-target_link_libraries(CPP Boost::thread)
-#if(BUILD_TESTS)
-  #add_executable(tests
-    # TODO: enum your files and delete this comment
-    #${CMAKE_CURRENT_SOURCE_DIR}/tests/test.cpp
-  #)
-  #target_link_libraries(tests ${PROJECT_NAME} GTest::gtest_main)
-  #enable_testing()
-  #add_test(NAME unit_tests COMMAND tests)
-#endif()
-
+target_link_libraries(lab7 Boost::thread)
 if(BUILD_COVERAGE)
   set(ENABLE_COVERAGE ON CACHE BOOL "Enable coverage build." FORCE)
   list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/tools/coverage/cmake")
