--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,41 +21,38 @@ HunterGate(
 )
 
 # TODO: rename project and delete this comment
-project(lab7 VERSION 0.1.0)
+project(lab9 VERSION 0.1.0)
 
 string(APPEND CMAKE_CXX_FLAGS " -pedantic -Werror -Wall -Wextra")
 string(APPEND CMAKE_CXX_FLAGS " -Wno-unused-command-line-argument")
 string(APPEND CMAKE_CXX_FLAGS " -Wshadow -Wnon-virtual-dtor")
 
 add_definitions(-DBOOST_ERROR_CODE_HEADER_ONLY)
-hunter_add_package(Boost COMPONENTS  system filesystem log)
-find_package(Boost 1.72.0 CONFIG REQUIRED thread log log_setup  date_time filesystem system)
+hunter_add_package(Boost COMPONENTS  system filesystem log program_options )
+find_package(Boost 1.72.0 CONFIG REQUIRED thread log log_setup program_options date_time filesystem system regex)
 
 #SET(Boost_USE_STATIC_LIBS ON)  
 #SET(Boost_USE_MULTITHREADED ON)  
-#FIND_PACKAGE(Boost 1.72.0 COMPONENTS **system thread filesystem date_time log log_setup** REQUIRED)  
+#FIND_PACKAGE(Boost 1.72.0 COMPONENTS **system thread filesystem  date_time regex log log_setup** REQUIRED)  
 
-hunter_add_package(nlohmann_json)
-find_package(nlohmann_json 3.8.0 CONFIG REQUIRED)
 
-add_library(suggestions STATIC
-  ${CMAKE_CURRENT_SOURCE_DIR}/sources/suggestions.cpp
+add_library(menu STATIC
+  ${CMAKE_CURRENT_SOURCE_DIR}/sources/menu.cpp
 )
-add_executable(lab7
- ${CMAKE_CURRENT_SOURCE_DIR}/sources/lab7.cpp
+add_executable(lab9
+ ${CMAKE_CURRENT_SOURCE_DIR}/sources/main.cpp
 )
 
-target_include_directories(lab7
+target_include_directories(lab9
   PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include
 )
-target_include_directories(suggestions
+target_include_directories(menu
   PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include
 )
-target_link_libraries(lab7 nlohmann_json::nlohmann_json)
-target_link_libraries(suggestions nlohmann_json::nlohmann_json)
 
 
-target_link_libraries(lab7 Boost::thread)
+target_link_libraries(lab9 Boost::thread)
+
 if(BUILD_COVERAGE)
   set(ENABLE_COVERAGE ON CACHE BOOL "Enable coverage build." FORCE)
   list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/tools/coverage/cmake")
