--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,13 +31,12 @@ add_definitions(-DBOOST_ERROR_CODE_HEADER_ONLY)
 hunter_add_package(Boost COMPONENTS  system filesystem log program_options )
 find_package(Boost 1.72.0 CONFIG REQUIRED thread log log_setup program_options date_time filesystem system regex)
 
-#SET(Boost_USE_STATIC_LIBS ON)  
-#SET(Boost_USE_MULTITHREADED ON)  
-#FIND_PACKAGE(Boost 1.72.0 COMPONENTS **system thread filesystem  date_time regex log log_setup** REQUIRED)  
+ 
 
 add_library(menu STATIC
   ${CMAKE_CURRENT_SOURCE_DIR}/sources/menu.cpp
 )
+add_executable(main
 ${CMAKE_CURRENT_SOURCE_DIR}/sources/main.cpp
 )
 target_include_directories(main
