--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,7 +32,7 @@ add_definitions(-DBOOST_ERROR_CODE_HEADER_ONLY)
 
 
 
-hunter_add_package(Boost COMPONENTS  system filesystem log program_options )
+hunter_add_package(Boost COMPONENTS  system filesystem log program_options regex)
 find_package(Boost 1.72.0 CONFIG REQUIRED thread log log_setup program_options date_time filesystem system regex)
 
 
