--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,8 +32,8 @@ add_definitions(-DBOOST_ERROR_CODE_HEADER_ONLY)
 
 
 
-hunter_add_package(Boost COMPONENTS  system filesystem log program_options regex)
-find_package(Boost 1.72.0 CONFIG REQUIRED thread log log_setup program_options date_time filesystem system regex)
+hunter_add_package(Boost COMPONENTS regex system filesystem log program_options )
+find_package(Boost 1.72.0 CONFIG REQUIRED regex system filesystem thread log log_setup program_options date_time)
 
 
 hunter_add_package(gumbo)
@@ -52,7 +52,7 @@ target_include_directories(main
 
 
 target_link_libraries(main Boost::program_options)
-target_link_libraries(main boost::regex)
+target_link_libraries(main Boost::regex Boost::system Boost::filesystem)
 
 if(BUILD_COVERAGE)
   set(ENABLE_COVERAGE ON CACHE BOOL "Enable coverage build." FORCE)
